# android_kernel_build

./: BUILD  BUILD.bazel  LICENSE  OWNERS  _ack_build.sh  _setup_env.sh  _setup_hermetic_toolchain.sh  abi_compliance.sh  bar.c  bazel.sh  build.sh  build_abi.sh  build_initramfs.sh  build_mixed.sh  build_test.sh  build_utils.sh  common.bazelrc  config.sh  copy_symbols.sh  envsetup.sh  foo.bzl  gettop.sh  menuconfig.sh  multi-switcher.sh  project.config  spotless_log_regex.txt  synchronize_owners
abi/: README-kmi_defines.md  README.md  abitool.py  bootstrap  check_buildtime_symbol_protection  check_buildtime_symbol_protection.py  check_protected_symbol_access  compare_to_symbol_list  compare_to_wl  compare_wl  dependency_graph.py  dependency_graph_drawer.py  dependency_graph_extractor.py  diff_abi  diff_abi.py  dump_abi  dump_abi.py  dump_uapi_header_abi.sh  extract_gki_protected_exports  extract_gki_protected_exports.py  extract_symbols  extract_symbols.py  filter_abi.py  flatten_symbol_list.py  flatten_whitelist  gki_check  kmi_defines.py  kmi_dump.c  process_symbols  process_symbols.py  symbol_extraction.py  symbols.deny  symbols.json  symbols.tsv  verify_ksymtab.py
coverage/: _init.sh  android_gather_on_test.sh  generate_html.sh  get_coverage.sh  llvm-gcov.sh
demo/: BUILD.bazel
gki/: README.md  add_EXPORT_SYMBOL_GPL  compare_mixed_trees  compare_mixed_trees.sh  defconfig_update.sh  device_dependencies  device_snapshot  download_from_ci  gki-cherry-pick  split_patches  uapi-verify.sh  unpack_ksyms
hermetic/: Dockerfile  build  run.sh
init/: init_ddk.py  init_ddk_test.py  init_download.py  repo_manifest_parser.py  repo_wrapper.py
kleaf/: BUILD.bazel  BUILD.rtt  README.md  abi_update_helper.py  bazel.WORKSPACE  bazel.kleaf-docs.WORKSPACE  bazel.py  bazel.rust.WORKSPACE  bazel.sh  bazelignore  build_cleaner.py  build_cleaner_test.py  build_config_repo.bzl  build_config_to_bazel.py  common.bazelrc  fail.bzl  (+77 more)
kleaf/bzlmod/: BUILD.bazel  DO_NOT_BUILD_HERE  MODULE.bazel  README.md  bazel.MODULE.bazel  bzlmod.WORKSPACE  common.MODULE.bazel  default_kernel_toolchain_ext.bzl  docs_MODULE.bazel  docs_build.config.constants  docs_kernel_toolchain_ext.bzl  make_kernel_toolchain_ext.bzl
kleaf/bzlmod/fake_modules/rules_jvm_external/: MODULE.bazel  extensions.bzl
kleaf/exp/: BUILD.bazel  myrule.bzl
kleaf/impl/: BUILD.bazel  KernelBuildInfos.bzl  KernelEnvInfo.bzl  KernelUnstrippedModulesInfo.bzl  analyze_inputs.bzl  analyze_inputs.py  android_filegroup.bzl  arg_wrapper.cpp  btf.bzl  cache_dir.bzl  cache_dir_config_tags.py  cc_toolchain_config.bzl  checkpatch.bzl  checkpatch.sh  common_providers.bzl  compile_commands_utils.bzl  config_utils.bzl  constants.bzl  debug.bzl  declare_host_tools.bzl  declare_kernel_prebuilts.bzl  default_host_tools.scl  defconfig_fragment_selector.bzl  file.bzl  file_selector.bzl  get_kmi_string.py  get_kmi_string_test.py  gki_artifacts.bzl  hermetic_exec.bzl  hermetic_genrule.bzl  hermetic_toolchain.bzl  hermetic_toolchain_utils.bzl  kernel_build.bzl  kernel_build_config.bzl  kernel_build_transition.bzl  kernel_compile_commands.bzl  kernel_config.bzl  kernel_config_settings.bzl  kernel_config_transition.bzl  kernel_dtstree.bzl  (+43 more)
kleaf/impl/abi/: abi_dump.bzl  abi_stgdiff.bzl  abi_transitions.bzl  abi_update.bzl  base_kernel_utils.bzl  dependency_graph.bzl  extracted_symbols.bzl  force_add_vmlinux_utils.bzl  get_kmi_symbol_checks.bzl  get_src_kmi_symbol_list.bzl  get_src_protected_exports_files.bzl  kernel_abi.bzl  kernel_abi_dist.bzl  kernel_build_abi.bzl  kernel_build_abi_dist.bzl  protected_exports.bzl  stg_diff.bzl  stg_extract.bzl  stg_monitoring.bzl  trim_nonlisted_kmi_utils.bzl
kleaf/impl/cc_toolchain_redirect/: cc_toolchain_redirect.sh
kleaf/impl/ddk/: analyze_ddk_headers.bzl  analyze_inputs.bzl  analyze_inputs.py  ddk_conditional_filegroup.bzl  ddk_config.bzl  ddk_config_subrule.bzl  ddk_headers.bzl  ddk_headers_archive.bzl  ddk_headers_target_generator.py  ddk_module.bzl  ddk_module_config.bzl  ddk_module_info.bzl  ddk_module_package.bzl  ddk_package.bzl  ddk_submodule.bzl  ddk_uapi_headers.bzl  expand_ddk_headers.bzl  gen_ddk_headers.bzl  gen_ddk_headers.py  gen_ddk_headers_archive_build_file.py  gen_makefile.py  gen_makefiles.py  kbuild_options.bzl  makefile.bzl  makefiles.bzl  makefiles.bzl.orig  module_makefiles.bzl  sanitize_inputs.py
kleaf/impl/defconfig/: BUILD.bazel  arm64_16k_defconfig  arm64_64k_defconfig  debug_defconfig  gcov_defconfig  kasan_any_mode_defconfig  kasan_defconfig  kasan_generic_defconfig  kasan_sw_tags_defconfig  kcsan_defconfig  kunit_defconfig  lto_full_defconfig  lto_none_defconfig  lto_thin_defconfig  rust_defconfig
kleaf/impl/fake_rules_cc/cc/: action_names.bzl  defs.bzl
kleaf/impl/image/: boot_image_builder.bzl  boot_images.bzl  dtbo.bzl  dtbo.bzl.orig  image_utils.bzl  initramfs.bzl  kernel_images.bzl  super_image.bzl  system_dlkm_image.bzl  vendor_dlkm_image.bzl
kleaf/pip/: BUILD.bazel  me.py  parse_req.bzl  requirements.in  requirements_lock.txt
kleaf/tests/cc_testing/: BUILD.bazel  bin.c  cpp.cpp  openssl_client.c
kleaf/tests/ddk_test/my_driver/: BUILD.bazel  Kconfig  defconfig  my_debugfs_code.c  my_driver.c  my_feature_x_code.c
kleaf/tests/ddk_test/my_driver/include/: my_private_header.h  my_public_header.h
kleaf/tests/integration_test/: BUILD  BUILD.bazel  integration_test.bzl  integration_test.py  integration_test.sh  reporter.py
kleaf/tests/integration_test/ddk_negative_test/: BUILD.bazel
kleaf/tests/integration_test/ddk_workspace_test/: .gitignore  README.md  WORKSPACE.bzlmod  extra_setup.py  fake_init_ddk.py
kleaf/tests/integration_test/ddk_workspace_test/in_tree/: BUILD.bazel
kleaf/tests/integration_test/ddk_workspace_test/out_of_tree/: BUILD.bazel
kleaf/tests/integration_test/ddk_workspace_test/tests/: BUILD.bazel
kleaf/tests/integration_test/hermetic_tools_test/: BUILD.bazel
kleaf/tests/integration_test/menuconfig_fragment_test/: BUILD.bazel
kleaf/tests/integration_test/menuconfig_merge_test/: BUILD.bazel
kleaf/tests/zip_test/: BUILD.bazel  zip_content_test.py
(+198 files in other folders)
