# Copyright (C) 2024 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Kleaf: Build Android kernel with Bazel."""

module(
    name = "kleaf",
    version = "0.0.0",
)

# Note: The version in bazel_dep will be overridden by single_version_override
# below. The version in bazel_dep denotes the version that Kleaf tooling
# expects. The versions must <= single_version_override() below.
bazel_dep(
    name = "bazel_skylib",
    version = "0.0.0",
)
bazel_dep(
    name = "abseil-py",
    version = "0.0.0",
    repo_name = "io_abseil_py",
)

bazel_dep(
    name = "stardoc",
    version = "0.0.0",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)

bazel_dep(
    name = "platforms",
    version = "0.0.0",
)
bazel_dep(
    name = "rules_cc",
    version = "0.0.0",
)

# Superset of all tools we need from host.
# For the subset of host tools we typically use for a kernel build,
# see //build/kernel:hermetic-tools.
kleaf_host_tools_ext = use_extension("//build/kernel/kleaf/impl:kleaf_host_tools_repo.bzl", "kleaf_host_tools_ext")
kleaf_host_tools_ext.declare(
    host_tools = [
        "bash",
        "perl",
        "rsync",
        "sh",
        # For BTRFS (b/292212788)
        "find",
    ],
)
use_repo(kleaf_host_tools_ext, "kleaf_host_tools")

new_kleaf_local_repository = use_repo_rule(
    "//build/kernel/kleaf/impl:local_repository.bzl",
    "new_kleaf_local_repository",
)

new_kleaf_local_repository(
    name = "libcap",
    build_file = "build/kernel/kleaf/libcap.BUILD",
    path = "external/libcap",
)

new_kleaf_local_repository(
    name = "libcap_ng",
    build_file = "build/kernel/kleaf/libcap_ng.BUILD",
    path = "external/libcap-ng",
)

new_kleaf_local_repository(
    name = "zopfli",
    build_file = "build/kernel/kleaf/zopfli.BUILD",
    path = "external/zopfli",
)

new_kleaf_local_repository(
    name = "pigz",
    build_file = "build/kernel/kleaf/pigz.BUILD",
    path = "external/pigz",
)

new_kleaf_local_repository(
    name = "prebuilt_ndk",
    build_file = "build/kernel/kleaf/ndk.BUILD",
    path = "prebuilts/ndk-r26",
)

clang_toolchain_repository = use_repo_rule(
    "//prebuilts/clang/host/linux-x86/kleaf:clang_toolchain_repository.bzl",
    "clang_toolchain_repository",
)

clang_toolchain_repository(
    name = "kleaf_clang_toolchain",
)

register_toolchains(
    "@kleaf_clang_toolchain//:all",
    "//build/kernel:hermetic_tools_toolchain",
    "//prebuilts/build-tools:py_toolchain",
)

# Below is generated by update-bazel-registry.py. DO NOT EDIT!
single_version_override(
    module_name = "abseil-py",
    version = "1.4.0",
)

single_version_override(
    module_name = "apple_support",
    version = "1.11.1",
)

single_version_override(
    module_name = "bazel_skylib",
    version = "1.5.0",
)

single_version_override(
    module_name = "platforms",
    version = "0.0.8",
)

single_version_override(
    module_name = "rules_cc",
    version = "0.0.4",
)

single_version_override(
    module_name = "rules_java",
    version = "6.1.1",
)

single_version_override(
    module_name = "rules_license",
    version = "0.0.4",
)

single_version_override(
    module_name = "rules_python",
    version = "0.27.1",
)

single_version_override(
    module_name = "stardoc",
    version = "0.5.3",
)
