module(name = "kleaf", version = "0.0.0")

register_toolchains("//build/kernel:hermetic_tools_toolchain")
register_toolchains("//prebuilts/build-tools:py_toolchain")

# TODO migrate clang toolchain to extensions
CLANG_VERSIONS = [
    # keep sorted
    "r498229b",
]
CLANG_SUPPORTED_ARCHITECTURES = [
    ("linux", "x86_64"),
    ("android", "arm64"),
    ("android", "arm"),
    ("android", "x86_64"),
    ("android", "i386"),
    ("android", "riscv64"),
]
[
    register_toolchains("//prebuilts/clang/host/linux-x86/kleaf:{}_{}_{}_clang_toolchain".format(version, target_os, target_cpu))
    for version in CLANG_VERSIONS for target_os, target_cpu in CLANG_SUPPORTED_ARCHITECTURES
]
[
    register_toolchains("//prebuilts/clang/host/linux-x86/kleaf:{}_{}_clang_toolchain".format(target_os, target_cpu))
    for target_os, target_cpu in CLANG_SUPPORTED_ARCHITECTURES
]

# Note: The version in bazel_dep will be overridden by single_version_override
# below. The version in bazel_dep denotes the version that Kleaf tooling
# expects. The versions must <= single_version_override() below.
bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
)
bazel_dep(
    name = "abseil-py",
    repo_name = "io_abseil_py",
    version = "1.4.0",
)
bazel_dep(
    name = "stardoc",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
    version = "0.6.2",
)
bazel_dep(
    name = "platforms",
    version = "0.0.8",
)
bazel_dep(
    name = "rules_cc",
    version = "0.0.4",
)

kleaf_host_tools_ext = use_extension("//build/kernel/kleaf/impl:kleaf_host_tools_repo.bzl", "kleaf_host_tools_ext")
use_repo(kleaf_host_tools_ext, "kleaf_host_tools")

kleaf_local_repository_ext = use_extension("//build/kernel/kleaf/impl:local_repository.bzl", "kleaf_local_repository_ext")
kleaf_local_repository_ext.declare_new(
    name = "libcap_ng",
    path = "external/libcap-ng",
    build_file = "build/kernel/kleaf/libcap_ng.BUILD",
)
use_repo(kleaf_local_repository_ext, "libcap_ng")

kleaf_local_repository_ext.declare_new(
    name = "libcap",
    path = "external/libcap",
    build_file = "build/kernel/kleaf/libcap.BUILD",
)
use_repo(kleaf_local_repository_ext, "libcap")

kleaf_local_repository_ext.declare_new(
    name = "prebuilt_ndk",
    path = "prebuilts/ndk-r26",
    build_file = "build/kernel/kleaf/ndk.BUILD",
)
use_repo(kleaf_local_repository_ext, "prebuilt_ndk")

# Below is generated by update-bazel-registry.py. DO NOT EDIT!
single_version_override(
    module_name = "abseil-py",
    version = "1.4.0",
)

single_version_override(
    module_name = "apple_support",
    version = "1.5.0",
)

single_version_override(
    module_name = "bazel_skylib",
    version = "1.5.0",
)

single_version_override(
    module_name = "platforms",
    version = "0.0.8",
)

single_version_override(
    module_name = "rules_cc",
    version = "0.0.4",
)

single_version_override(
    module_name = "rules_java",
    version = "6.1.1",
)

single_version_override(
    module_name = "rules_license",
    version = "0.0.4",
)

single_version_override(
    module_name = "rules_python",
    version = "0.27.0",
)
