# Copyright (C) 2024 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Kleaf: Build Android kernels with Bazel."""

module(
    name = "kleaf_docs",
)

new_kleaf_local_repository = use_repo_rule(
    "//build/kernel/kleaf/impl:local_repository.bzl",
    "new_kleaf_local_repository",
)

new_kleaf_local_repository(
    name = "prebuilt_ndk",
    build_file = "build/kernel/kleaf/ndk.BUILD",
    path = "prebuilts/ndk-r26",
)

kernel_toolchain_ext = use_extension("//build:kernel_toolchain_ext.bzl", "kernel_toolchain_ext")
kernel_toolchain_ext.install()
use_repo(kernel_toolchain_ext, "kernel_toolchain_info")
use_repo(kernel_toolchain_ext, "kleaf_clang_toolchain")

register_toolchains(
    "@kleaf_clang_toolchain//:all",
    "//build/kernel:hermetic_tools_toolchain",
    "//prebuilts/build-tools:py_toolchain",
)

bazel_dep(
    name = "bazel_skylib",
)
bazel_dep(
    name = "platforms",
)
bazel_dep(
    name = "rules_cc",
)

bazel_dep(
    name = "stardoc",
    version = "0.6.2",
    repo_name = "io_bazel_stardoc",
)

local_path_override(
    module_name = "apple_support",
    path = "external/bazelbuild-apple_support",
)

local_path_override(
    module_name = "bazel_skylib",
    path = "external/bazel-skylib",
)

local_path_override(
    module_name = "platforms",
    path = "external/bazelbuild-platforms",
)

local_path_override(
    module_name = "rules_cc",
    path = "external/bazelbuild-rules_cc",
)

local_path_override(
    module_name = "rules_java",
    path = "external/bazelbuild-rules_java",
)

local_path_override(
    module_name = "rules_jvm_external",
    path = "build/kernel/kleaf/bzlmod/fake_modules/rules_jvm_external",
)

local_path_override(
    module_name = "rules_license",
    path = "external/bazelbuild-rules_license",
)

local_path_override(
    module_name = "rules_python",
    path = "external/bazelbuild-rules_python",
)

local_path_override(
    module_name = "rules_proto",
    path = "external/bazelbuild-rules_proto",
)

local_path_override(
    module_name = "stardoc",
    path = "external/stardoc",
)

local_path_override(
    module_name = "protobuf",
    path = "external/protobuf",
)
