load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(":myrule.bzl", "my_outer_macro", "myrule")

string_flag(
    name = "trim_real_value",
    build_setting_default = "unset",
    values = [
        "true",
        "false",
        "unset",
    ],
)

myrule(
    name = "internal_target",
    trim = False,
)

my_outer_macro(
    name = "outer",
    internal_rule = ":internal_target",
)
