# Copyright (C) 2023 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

filegroup(
    name = "gcov",
    srcs = select({
        "//build/kernel/kleaf:gcov_is_true": ["gcov_defconfig"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "btf_debug_info",
    srcs = select({
        "//build/kernel/kleaf:btf_debug_info_is_enabled": ["btf_debug_info_enabled_defconfig"],
        "//build/kernel/kleaf:btf_debug_info_is_disabled": ["btf_debug_info_disabled_defconfig"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "lto",
    srcs = select({
        "//build/kernel/kleaf:lto_is_default": [],
        "//build/kernel/kleaf:lto_is_none": ["lto_none_defconfig"],
        "//build/kernel/kleaf:lto_is_thin": ["lto_thin_defconfig"],
        # Handled in kernel_config.bzl
        "//build/kernel/kleaf:lto_is_fast": [],
    })
)
