# Copyright (C) 2023 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

exports_files([
    "arm64_16k_defconfig",
])

filegroup(
    name = "btf_debug_info",
    srcs = select({
        "//build/kernel/kleaf:btf_debug_info_is_enabled": ["btf_debug_info_enabled_defconfig"],
        "//build/kernel/kleaf:btf_debug_info_is_disabled": ["btf_debug_info_disabled_defconfig"],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "arm64_page_size",
    srcs = select({
        # The default is to not apply anything and use the default in
        # gki_defconfig.
        "//build/kernel/kleaf:page_size_4k": [],
        "//build/kernel/kleaf:page_size_16k": ["arm64_16k_defconfig"],
        "//build/kernel/kleaf:page_size_64k": ["arm64_64k_defconfig"],
    }),
    visibility = ["//visibility:public"],
)

[filegroup(
    name = "{}_page_size".format(arch),
    srcs = select({
        "//build/kernel/kleaf:page_size_4k": [],
        # Intentionally not set options for 16k and 64k
        # so build will fail if --page_size=16k or 64k for non-arm64 architectures
    }),
    visibility = ["//visibility:public"],
) for arch in [
    # keep sorted
    "arm",
    "i386",
    "riscv64",
    "x86_64",
]]
