load("@bazel_skylib//rules:build_test.bzl", "build_test")

cc_binary(
    name = "linux_x86_64_bin",
    srcs = ["host.c"],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

build_test(
    name = "cc_testing",
    targets = [
        ":linux_x86_64_bin",
    ],
)
