load("@bazel_skylib//rules:build_test.bzl", "build_test")

cc_binary(
    name = "arm64_bin",
    srcs = ["target.c"],
    target_compatible_with = [
        "@platforms//cpu:arm64",
    ],
)

cc_binary(
    name = "x86_64_bin",
    srcs = ["host.c"],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
    ],
)

alias(
    name = "cc_testing",
    actual = select({
        "//build/bazel/platforms/os_arch:android_arm64": ":arm64_bin",
        "//build/bazel/platforms/os_arch:linux_glibc_x86_64": ":x86_64_bin",
    }),
)
