# Copyright (C) 2023 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("//build/kernel/kleaf/tests/utils:write_flag.bzl", "write_flag")

string_flag(
    name = "raw_test_result_dir",
    build_setting_default = "",
)

write_flag(
    name = "raw_test_result_dir_value",
    flag = ":raw_test_result_dir",
)

py_test(
    name = "reporter",
    timeout = "short",
    srcs = ["reporter.py"],
    data = [":raw_test_result_dir_value"],
)

# bazel run //build/kernel/kleaf/test/integration_test -- [--config=ants [...]]
# Note `bazel run` not `bazel test`
# This wrapper script is needed because:
# - BUILD_WORKSPACE_DIRECTORY is needed
# - The test involves running `bazel clean` in between. If this were executed
#   with `bazel test`, the directory structure in output_base would be broken
#   before results are reported back to bazel.
py_binary(
    name = "integration_test",
    srcs = ["integration_test.py"],
    deps = [
        "//build/kernel/kleaf/analysis:inputs",
        "@io_abseil_py//absl/testing:absltest",
        "@io_abseil_py//absl/testing:xml_reporter",
    ],
)
