# Copyright (C) 2024 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//build/kernel/kleaf:hermetic_tools.bzl", "hermetic_exec", "hermetic_genrule")

hermetic_exec(
    name = "test_bin_1",
    script = "echo 1",
    tags = ["manual"],
)

hermetic_exec(
    name = "test_bin_2",
    script = "echo 2",
    tags = ["manual"],
)

hermetic_genrule(
    name = "test_genrule",
    tools = [":test_bin_1"],
    outs = ["out.txt"],
    cmd = "touch $@",
    tags = ["manual"],
)

filegroup(
    name = "mytest",
    srcs = [
        ":test_genrule",
        ":test_bin_2",
    ],
    tags = ["manual"],
)
