load("@bazel_skylib//rules:build_test.bzl", "build_test")

build_test(
    name = "build_test",
    targets = [
        "//in_tree:device_images",
        "//out_of_tree:device_images",
    ],
)

# TODO: Add tests on the image content

test_suite(
    name = "tests",
    tests = [
        ":build_test",
    ],
)
